# CreationEngine

./: .gitignore  404.html  CE.conf  CMakeLists.txt  CMakePresets.json  README.md  compile-shaders.bat  compile-shaders.sh  index.html  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cmake.yml
.history/: CMakeLists_20201204225712.txt  CMakeLists_20201205120052.txt  CMakeLists_20201205120109.txt  compile-shaders_20201206213222.bat  file-ops_20201206214020.h  main_20201206213559.cpp  main_20201206213603.cpp  main_20201206213633.cpp  main_20201206213638.cpp  main_20201206213718.cpp  main_20201206213732.cpp  main_20201206213743.cpp  main_20201206213813.cpp  main_20201206213830.cpp  main_20201206213833.cpp  main_20201206213845.cpp  main_20201206214055.cpp  main_20201206214113.cpp  main_20201206214509.cpp
.vcpkg/ports/bgfx/: portfile.cmake  vcpkg.json
.vcpkg/versions/: baseline.json
.vcpkg/versions/b-/: bgfx.json
assets/css/: styles.b078ed29.css
assets/js/: 293.39203928.js  491.c02837b9.js  812.f0f5d82b.js  app.954d1228.js  runtime~app.d1dad352.js  v-3706649a.8cea7fc4.js  v-8daa1a0e.7a38227a.js
docs/: README.md  deploy.sh  package.json
docs/.vuepress/: config.js
mods/default/: init.lua
shader/: f_simple.sc  v_simple.sc  varying.def.sc
shader/block/: f_simple.sc
src/: Block.cpp  Block.h  Config.cpp  Config.h  block.cpp  block.h  camera.cpp  camera.h  config.cpp  gui.cpp  gui.h  io.cpp  io.h  main - 副本.cpp  main.cpp  mapgen.cpp  mapgen.h  renderer.cpp  renderer.h  typemanager.cpp  typemanager.h  utils.cpp  utils.h  window.cpp  world.cpp  world.h
src/IDL/: network.fbs  network_generated.h
src/client/: block_c.cpp  block_c.h  camera.cpp  camera.h  client.cpp  client.h  gui.cpp  gui.h  main.cpp  network_c.cpp  network_c.h  player_c.cpp  player_c.h  renderer.cpp  renderer.h  typemanager_c.cpp  typemanager_c.h  utils.cpp  utils.h
src/glm/detail/: func_common.inl  type_quat.hpp  type_quat.inl
src/lua/: mod.cpp  mod.h
src/server/: block_s.cpp  block_s.h  network_s.cpp  network_s.h  server.cpp  server.h  typemanager_s.cpp  typemanager_s.h  world_s.cpp  world_s.h
src/server/lua/: mod.cpp  mod.h  tool.cpp  tool.h
